# cp30_llm_app

./: CP30_LLM.ipynb  README.md  app.py  pyproject.toml
